syntax = "proto3";

import "go_serv/extension.proto";
import "net/ftp.proto";
import "net/session.proto";

package go_serv.net;

message Ping {
  message Request {
    uint64 payload = 1;
  }
  message Response {
    uint64 payload = 1;
  }
}

service NetParcel {
  //..
  rpc Ping(Ping.Request) returns (Ping.Response) { }

  // Creates a new session
  rpc SecureSession(Session.Request) returns (Session.Response) { }

  //
  rpc FtpNewSession(Ftp.NewSession.Request) returns (Ftp.NewSession.Response) {
    option (.go_serv.optional_session) = true;
  }

  //
  rpc FtpTransfer(Ftp.FileChunk.Request) returns (Ftp.FileChunk.Response) {
    option (.go_serv.require_session) = true;
  }

  //
  rpc FtpInquiry(Ftp.Inquiry.Request) returns (Ftp.Inquiry.Response) {
    option (.go_serv.require_session) = true;
  }
}
